--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -234,7 +234,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2016-08-05 03:13:42
+// updated on 2016-08-14 16:17:43
 
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,85.17.73.31,Proxy,force-remote-dns
@@ -268,6 +268,7 @@ DOMAIN-SUFFIX,expekt.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,extmatrix.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fakku.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fastpic.ru,Proxy,force-remote-dns
+DOMAIN-SUFFIX,filesor.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,financetwitter.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,findmima.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,flipboard.com,Proxy,force-remote-dns
@@ -414,6 +415,7 @@ DOMAIN-SUFFIX,ampproject.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,android.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,androidify.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,appspot.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,blogspot.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,certificate-transparency.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chrome.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chromecast.com,Proxy,force-remote-dns
@@ -468,15 +470,19 @@ DOMAIN-SUFFIX,igoogle.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,itasoftware.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,like.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nic.google,Proxy,force-remote-dns
+DOMAIN-SUFFIX,on2.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,panoramio.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,picasaweb.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,polymer-project.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,thinkwithgoogle.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,tiltbrush.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,questvisual.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,recaptcha.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,redhotlabs.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,registry.google,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sipml5.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,synergyse.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tensorflow.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,thinkwithgoogle.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tiltbrush.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,waveprotocol.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,webmproject.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,webrtc.org,Proxy,force-remote-dns
@@ -517,6 +523,7 @@ DOMAIN-SUFFIX,1998cdp.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,1bao.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,1eew.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,1mobile.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,1mobile.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,1pondo.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,2-hand.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,2000fun.com,Proxy,force-remote-dns
@@ -651,6 +658,7 @@ DOMAIN-SUFFIX,americangreencard.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.americorps.gov,Proxy,force-remote-dns
 DOMAIN-SUFFIX,amiblockedornot.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,amigobbs.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,amitabhafoundation.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,amnesty.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,amnesty.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,amnestyusa.org,Proxy,force-remote-dns
@@ -661,6 +669,7 @@ DOMAIN-SUFFIX,anchorfree.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ancsconf.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,andfaraway.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,android-x86.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,angelfire.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,angularjs.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,animecrazy.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,animeshippuuden.com,Proxy,force-remote-dns
@@ -880,6 +889,7 @@ DOMAIN-SUFFIX,boxun.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,boxun.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,boxunblog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,boxunclub.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,boyangu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,boyfriendtv.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,boysfood.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,br.st,Proxy,force-remote-dns
@@ -1136,6 +1146,7 @@ DOMAIN-SUFFIX,cna.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cnabc.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cnd.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,download.cnet.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cnex.org.cn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cnineu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wiki.cnitter.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cnn.com,Proxy,force-remote-dns
@@ -1214,6 +1225,7 @@ DOMAIN-SUFFIX,dadazim.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dadi360.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dafagood.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dafahao.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,daidostup.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dailidaili.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dailymotion.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,daiphapinfo.net,Proxy,force-remote-dns
@@ -1332,6 +1344,7 @@ DOMAIN-SUFFIX,dropboxusercontent.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,drsunacademy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,drtuber.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dscn.info,Proxy,force-remote-dns
+DOMAIN-SUFFIX,dstk.dk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dtiblog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dtic.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dtiserv2.com,Proxy,force-remote-dns
@@ -1439,6 +1452,7 @@ DOMAIN-SUFFIX,epochtimes.se,Proxy,force-remote-dns
 DOMAIN-SUFFIX,epochtimestr.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,epochweek.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,epochweekly.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,eporner.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,equinenow.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,erabaru.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,eraysoft.com.tr,Proxy,force-remote-dns
@@ -1510,6 +1524,7 @@ DOMAIN-SUFFIX,familyfed.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fanglizhi.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fangong.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fangongheike.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,fanqiang.tk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fanqianghou.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fapdu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,faproxy.com,Proxy,force-remote-dns
@@ -1623,6 +1638,7 @@ DOMAIN-SUFFIX,freealim.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whitebear.freebearblog.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freebrowser.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freechal.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,freecn.top,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freedomchina.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freedomhouse.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freedomsherald.org,Proxy,force-remote-dns
@@ -1920,35 +1936,17 @@ DOMAIN-SUFFIX,helpster.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,helpzhuling.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hentaitube.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hentaivideoworld.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,date.fm,Proxy,force-remote-dns
-DOMAIN-SUFFIX,flightcaster.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,branch.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,awardwinningfjords.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,futureme.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getcloudapp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cl.ly,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getsmartlinks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,git-scm.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,lesscss.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,list.ly,Proxy,force-remote-dns
-DOMAIN-SUFFIX,maxgif.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,overlapr.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,peerpong.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,pose.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,samsoff.es,Proxy,force-remote-dns
-DOMAIN-SUFFIX,sendoid.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,speckleapp.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,stuffimreading.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,tomayko.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,twt.fm,Proxy,force-remote-dns
-DOMAIN-SUFFIX,views.fm,Proxy,force-remote-dns
 DOMAIN-SUFFIX,heqinglian.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,here4news.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,heungkongdiscuss.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hexxeh.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,app.heywire.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,heyzo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hgseav.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hhdcb3office.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hi-on.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hidden-advent.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hidecloud.com,Proxy,force-remote-dns
@@ -2087,6 +2085,7 @@ DOMAIN-SUFFIX,hwinfo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fang-lizhi.hxwk.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hxwq.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hyperrate.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ebook.hyread.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,i1.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,i2p2.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,i2runner.com,Proxy,force-remote-dns
@@ -2210,6 +2209,7 @@ DOMAIN-SUFFIX,islam.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,islamawareness.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,islamhouse.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,islamicity.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,islamicpluralism.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,islamtoday.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,isaacmao.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,isgreat.org,Proxy,force-remote-dns
@@ -2221,6 +2221,7 @@ DOMAIN-SUFFIX,israbox.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,istars.co.nz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,oversea.istarshine.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.istef.info,Proxy,force-remote-dns
+DOMAIN-SUFFIX,istiqlalhewer.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,istockphoto.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,isunaffairs.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,isuntv.com,Proxy,force-remote-dns
@@ -2328,7 +2329,6 @@ DOMAIN-SUFFIX,kcsoftwares.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kebrum.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kechara.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,keepandshare.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,keepvid.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kendincos.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kenengba.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,keontech.net,Proxy,force-remote-dns
@@ -2378,7 +2378,9 @@ DOMAIN-SUFFIX,lamayeshe.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.lamenhu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lamnia.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lamrim.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,lanterncn.cn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lantosfoundation.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,laod.cn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,laogai.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,laomiu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,laoyang.info,Proxy,force-remote-dns
@@ -2547,6 +2549,7 @@ DOMAIN-SUFFIX,memri.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,memrijttm.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mercyprophet.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,meridian-trust.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,meripet.biz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,meripet.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,merit-times.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,meshrep.com,Proxy,force-remote-dns
@@ -2571,6 +2574,7 @@ DOMAIN-SUFFIX,mihr.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mihua.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,milph.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,milsurps.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mimiai.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mimivip.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mimivv.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mindrolling.org,Proxy,force-remote-dns
@@ -2829,6 +2833,7 @@ DOMAIN-SUFFIX,nzchinese.net.nz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,observechina.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,obutu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ocaspro.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,occupytiananmen.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,oclp.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ocreampies.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,october-review.org,Proxy,force-remote-dns
@@ -3023,6 +3028,7 @@ DOMAIN-SUFFIX,porn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,porn2.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,porn5.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pornbase.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pornerbros.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pornhd.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pornhost.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pornhub.com,Proxy,force-remote-dns
@@ -3039,6 +3045,7 @@ DOMAIN-SUFFIX,portablevpn.nl,Proxy,force-remote-dns
 DOMAIN-SUFFIX,poskotanews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,post852.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,postadult.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,postimg.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,powercx.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,powerphoto.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.powerpointninja.com,Proxy,force-remote-dns
@@ -3168,6 +3175,7 @@ DOMAIN-SUFFIX,recordhistory.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,recovery.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,online.recoveryversion.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,recoveryversion.com.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,redchinacn.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,redchinacn.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,redtube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,referer.us,Proxy,force-remote-dns
@@ -3217,6 +3225,7 @@ DOMAIN-SUFFIX,rotten.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rsf.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rsf-chinese.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rsgamen.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,phosphation13.rssing.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rssmeme.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rtalabel.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rthk.hk,Proxy,force-remote-dns
@@ -3235,6 +3244,7 @@ DOMAIN-SUFFIX,s-dragon.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,s1heng.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.s4miniarchive.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,s8forum.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cdn1.lp.saboom.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sacom.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sadpanda.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,safervpn.com,Proxy,force-remote-dns
@@ -3244,6 +3254,7 @@ DOMAIN-SUFFIX,sakya.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,salvation.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,samair.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sambhota.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cn.sandscotaicentral.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sanmin.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sapikachu.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,savemedia.com,Proxy,force-remote-dns
@@ -3254,6 +3265,7 @@ DOMAIN-SUFFIX,savetibet.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,savetibet.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,savevid.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,say2.info,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sbme.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,scasino.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.sciencemag.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sciencenets.com,Proxy,force-remote-dns
@@ -3337,6 +3349,7 @@ DOMAIN-SUFFIX,shwchurch.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shwchurch3.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sidelinesnews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sidelinessportseatery.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sijihuisuo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,simplecd.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,simpleproductivityblog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bbs.sina.com,Proxy,force-remote-dns
@@ -3370,6 +3383,7 @@ DOMAIN-SUFFIX,sitetag.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sis.xxx,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sis001.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sis001.us,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sjrt.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sjum.cn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sketchappsources.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,skimtube.com,Proxy,force-remote-dns
@@ -3463,6 +3477,7 @@ DOMAIN-SUFFIX,sproxy.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,squarespace.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ssh91.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sspro.ml,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sstmlt.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stackoverflow.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stage64.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,standupfortibet.org,Proxy,force-remote-dns
@@ -3477,7 +3492,6 @@ DOMAIN-SUFFIX,stc.com.sa,Proxy,force-remote-dns
 DOMAIN-SUFFIX,steamcommunity.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,steel-storm.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stepchina.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,stepmania.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ny.stgloballink.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sthoo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stickam.com,Proxy,force-remote-dns
@@ -4050,6 +4064,7 @@ DOMAIN-SUFFIX,uyghurensemble.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,uyghurcongress.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,uyghurpen.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,uyghurpress.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,uyghurstudies.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,uygur.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,uymaarip.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,v2ray.com,Proxy,force-remote-dns
@@ -4282,17 +4297,16 @@ DOMAIN-SUFFIX,wowlegacy.ml,Proxy,force-remote-dns
 DOMAIN-SUFFIX,woxinghuiguo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,woyaolian.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wpoforum.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,wqlhw.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wqyd.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wrchina.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wretch.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wsj.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,wsjhk.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wsj.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,wsjhk.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wtbn.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wtfpeople.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,wuala.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wuerkaixi.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,wufafangwen.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wufi.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wuguoguang.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wujie.net,Proxy,force-remote-dns
@@ -4317,6 +4331,7 @@ DOMAIN-SUFFIX,xfm.pp.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xgmyd.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xh4n.cn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xhamster.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,xianchawang.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xianjian.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xianqiao.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xiaochuncnjp.com,Proxy,force-remote-dns
@@ -4406,6 +4421,7 @@ DOMAIN-SUFFIX,yibaochina.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,yidio.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,yilubbs.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xa.yimg.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,yingsuoss.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,yipub.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,yinlei.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,yobt.com,Proxy,force-remote-dns
@@ -4442,7 +4458,6 @@ DOMAIN-SUFFIX,yvesgeleyn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ywpw.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,yx51.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,yyii.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,yymaya.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,yzzk.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zacebook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zalmos.com,Proxy,force-remote-dns
