--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -234,7 +234,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2016-08-14 16:17:43
+// updated on 2016-08-29 04:37:33
 
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,85.17.73.31,Proxy,force-remote-dns
@@ -332,7 +332,6 @@ DOMAIN-SUFFIX,nusatrip.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nuuvem.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,omni7.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ontrac.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,osaka69.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pandora.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pandora.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,parkansky.com,Proxy,force-remote-dns
@@ -375,6 +374,7 @@ DOMAIN-SUFFIX,china-mmm.jp.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lsxszzg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,china-mmm.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,china-mmm.sa.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,s3-ap-northeast-1.amazonaws.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,avmo.pw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,avmoo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,avmoo.net,Proxy,force-remote-dns
@@ -407,6 +407,7 @@ DOMAIN-SUFFIX,facebook.in,Proxy,force-remote-dns
 DOMAIN-SUFFIX,facebook.nl,Proxy,force-remote-dns
 DOMAIN-SUFFIX,facebook.se,Proxy,force-remote-dns
 DOMAIN-SUFFIX,messenger.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,oculus.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,1e100.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,abc.xyz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,admob.com,Proxy,force-remote-dns
@@ -438,7 +439,30 @@ DOMAIN-SUFFIX,ggpht.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gmail.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gmodules.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,goo.gl,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.ae,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.am,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.cat,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.cd,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.ci,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.co.jp,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.co.kr,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.co.ma,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.de,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.dk,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.es,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.fi,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.fr,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.gg,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.ie,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.is,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.it,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.nl,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.no,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.sk,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.sm,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.tk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,googleapis.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,googleapps.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,googleartproject.com,Proxy,force-remote-dns
@@ -479,6 +503,7 @@ DOMAIN-SUFFIX,recaptcha.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,redhotlabs.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,registry.google,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sipml5.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,stories.google,Proxy,force-remote-dns
 DOMAIN-SUFFIX,synergyse.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tensorflow.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thinkwithgoogle.com,Proxy,force-remote-dns
@@ -602,6 +627,7 @@ DOMAIN-SUFFIX,actimes.com.au,Proxy,force-remote-dns
 DOMAIN-SUFFIX,activpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,aculo.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,addictedtocoffee.de,Proxy,force-remote-dns
+DOMAIN-SUFFIX,adelaidebbs.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,adpl.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,adult-sex-games.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,adultfriendfinder.com,Proxy,force-remote-dns
@@ -776,12 +802,13 @@ DOMAIN-SUFFIX,dajusha.baywords.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bbchat.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bb-chat.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bbc.co.uk,Proxy,force-remote-dns
-DOMAIN-SUFFIX,bbc.co,Proxy,force-remote-dns
+DOMAIN-SUFFIX,bbc.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,news.bbc.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,newsforums.bbc.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bbcchinese.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bbc.in,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bbg.gov,Proxy,force-remote-dns
+DOMAIN-SUFFIX,bbkz.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bbnradio.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bbs-tw.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bbsdigest.com,Proxy,force-remote-dns
@@ -1560,6 +1587,7 @@ DOMAIN-SUFFIX,fdc89.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fourface.nodesnoop.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,feelssh.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,feer.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,feifeiss.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,feitianacademy.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,feitian-california.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,feministteacher.com,Proxy,force-remote-dns
@@ -1717,6 +1745,7 @@ DOMAIN-SUFFIX,gaeproxy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gaforum.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,galaxymacau.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,galenwu.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,galstars.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,game735.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gamebase.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gamejolt.com,Proxy,force-remote-dns
@@ -1988,7 +2017,6 @@ DOMAIN-SUFFIX,hkdailynews.com.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hkdf.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hkej.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hkepc.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,global.hkepc.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,china.hket.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hkfaa.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hkfreezone.com,Proxy,force-remote-dns
@@ -2203,8 +2231,6 @@ DOMAIN-SUFFIX,ironicsoftware.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ironbigfools.compython.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ironpython.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,is.gd,Proxy,force-remote-dns
-DOMAIN-SUFFIX,beta.iset.com.tw,Proxy,force-remote-dns
-DOMAIN-SUFFIX,forum.iset.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,islam.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,islamawareness.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,islamhouse.com,Proxy,force-remote-dns
@@ -2344,6 +2370,7 @@ DOMAIN-SUFFIX,www.kindleren.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kingdomsalvation.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kinghost.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kingstone.com.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,kink.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,killwall.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kir.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kissbbao.cn,Proxy,force-remote-dns
@@ -2509,7 +2536,6 @@ DOMAIN-SUFFIX,makemymood.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,maniash.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mansion.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mansionpoker.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,markmail.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,martau.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.martinoei.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,martsangkagyuofficial.org,Proxy,force-remote-dns
@@ -2572,6 +2598,7 @@ DOMAIN-SUFFIX,middle-way.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mihk.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mihr.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mihua.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mikesoltys.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,milph.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,milsurps.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mimiai.net,Proxy,force-remote-dns
@@ -3050,6 +3077,7 @@ DOMAIN-SUFFIX,powercx.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,powerphoto.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.powerpointninja.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cdn.printfriendly.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pritunl.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,provpnaccounts.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,proxfree.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,proxyanonimo.es,Proxy,force-remote-dns
@@ -3076,7 +3104,6 @@ DOMAIN-SUFFIX,premeforwindows7.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,presentationzen.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,prestige-av.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,prisoneralert.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,pritunl.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,privacybox.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,private.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,privateinternetaccess.com,Proxy,force-remote-dns
@@ -3484,6 +3511,7 @@ DOMAIN-SUFFIX,standupfortibet.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stanford.edu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,usinfo.state.gov,Proxy,force-remote-dns
 DOMAIN-SUFFIX,statueofdemocracy.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,starfishfx.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,starp2p.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,startpage.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,state168.com,Proxy,force-remote-dns
@@ -3493,6 +3521,7 @@ DOMAIN-SUFFIX,steamcommunity.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,steel-storm.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stepchina.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ny.stgloballink.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hd.stheadline.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sthoo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stickam.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stickeraction.com,Proxy,force-remote-dns
@@ -4487,6 +4516,7 @@ DOMAIN-SUFFIX,zhongguorenquan.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zhongguotese.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zhongmeng.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zhreader.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,zhuangbi.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zhuanxing.cn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zhuatieba.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zhuichaguoji.org,Proxy,force-remote-dns
@@ -4514,6 +4544,7 @@ DOMAIN-SUFFIX,zuola.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zvereff.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zyzc9.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zzcartoon.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,phobos.apple.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zh.wikibooks.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gov.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tacc.cwb.gov.tw,Proxy,force-remote-dns
