fix google map problem

--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -22,7 +22,8 @@ Proxy = select,💊DIRECT,@Auto,🇭🇰HK,🇸🇬SG,🇯🇵JP,🇺🇸US
 
 
 [Rule]
-//for Google blogspot 
+//for Google blogspot
+DOMAIN-SUFFIX,google.cn,DIRECT
 DOMAIN-KEYWORD,google,Proxy,force-remote-dns
 DOMAIN-KEYWORD,blogspot,Proxy,force-remote-dns
 //for BBC 
@@ -234,7 +235,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2016-09-14 19:29:35
+// updated on 2016-10-07 15:58:51
 
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,85.17.73.31,Proxy,force-remote-dns
